--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,19 @@
   }
 }
  */
+
+.container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  background-color: aliceblue;
+}
+
+#baap {
+  position: relative;
+  /* display: flex;
+  justify-content: space-between; */
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  gap: 10px;
+}
